added myer and manu, update me img

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						</h1>
 					</div>
 					<div class="grid grid-8-12 offset-bottom-2">
-						<img class="me mobile-align-center mobile-hide" src="media/images/me.jpg">
+						<img class="me mobile-align-center mobile-hide" src="media/images/me.jpg" width="260">
 						<div class="me-blurry"></div>
 						<p class="f-large">
 							I live in Sydney, Australia.
@@ -89,6 +89,52 @@
 				<div class="container wide">
 					<div class="text grid grid-4-12">
 						<div class="f-small align-right superscript tablet-hide">
+							Web Design + Coding
+						</div>
+						<h1 class="pull-right uppercase align-right padding-bottom">
+							Stackla
+						</h1>
+						<p class="f-medium align-right">
+							The website draws most of Stackla's leads by showcasing Stackla's five different solutions<span class="tablet-hide">, showing the most popular clients, and using a fun animation to quickly explain what the product does</span>.
+						</p>
+						<a class="button pull-right" href="http://stackla.com" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/stackla.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Coding
+						</div>
+						<h2 class="pull-right uppercase align-right padding-bottom">
+							Manchester United
+						</h2>
+						<p class="f-medium align-right">
+						 	The site allows fans to see all the content being produced by the club in one place across all their major accounts.<span class="tablet-hide"> It's a national site, serving multiple languages at once.</span>
+						</p>
+						<a class="button pull-right" href="http://social.manutd.com/" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/manu.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
 							Coding
 						</div>
 						<h2 class="pull-right uppercase align-right padding-bottom">
@@ -112,19 +158,19 @@
 				<div class="container wide">
 					<div class="text grid grid-4-12">
 						<div class="f-small align-right superscript tablet-hide">
-							Web Design + Coding
+							Coding
 						</div>
-						<h1 class="pull-right uppercase align-right padding-bottom">
-							Stackla
-						</h1>
-						<p class="f-medium align-right">
-							The website draws most of Stackla's leads by showcasing Stackla's five different solutions<span class="tablet-hide">, showing the most popular clients, and using a fun animation to quickly explain what the product does</span>.
+						<h2 class="pull-right uppercase align-right padding-bottom">
+							Myer
+						</h2>
+						<p class="f-medium align-right" style="clear: right;">
+							A number of widgets were built to support the livestream of the Myer Spring Summer 2015 Fashion Launch.
 						</p>
-						<a class="button pull-right" href="http://stackla.com" target="_blank">Visit Site <i class="icon-right"></i></a>
+						<a class="button pull-right" href="http://myer.com.au/livestream" target="_blank">Visit Site <i class="icon-right"></i></a>
 					</div>
 					<div class="grid grid-8-12">
 						<div class="img-viewer">
-							<img src="media/images/stackla.jpg">
+							<img src="media/images/myer.jpg">
 						</div>
 					</div>
 				</div>
