--- a/index.html
+++ b/index.html
@@ -186,11 +186,13 @@
 					</div>
 					<div class="grid grid-6-12">
 						<p class="f-large">
-							If you'd like to work with me, contact me on one of these:
+							Let's work together!
 							<br>
 							<a href="mailto:morgancarter1@gmail.com"><i class="icon-fw icon-mail"></i>morgancarter1@gmail.com</a>
 							<br>
 							<a><i class="icon-fw icon-phone"></i>0434 886 047</a>
+							<br>
+							<a href="MorganCarterResume.pdf" target="_blank"><i class="icon-fw icon-doc-text"></i>Résumé</a>
 						</p>
 					</div>
 				</div>
