--- a/index.html
+++ b/index.html
@@ -89,6 +89,30 @@
 				<div class="container wide">
 					<div class="text grid grid-4-12">
 						<div class="f-small align-right superscript tablet-hide">
+							Website Design, UX and Coding
+						</div>
+						<h2 class="pull-right uppercase align-right padding-bottom">
+							Stackla Admin Portal
+						</h2>
+						<p class="f-medium align-right" style="clear: right;">
+							The Stackla Admin Portal allows clients to aggregate and curate their content, and edit their displays.
+							<br>
+							The UX has been constantly improved with user testing, and is supported by a minimal design focusing on content and small bursts of colour.
+						</p>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/admin.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
 							Web Design + Coding
 						</div>
 						<h1 class="pull-right uppercase align-right padding-bottom">
