--- a/pathologic/index.html
+++ b/pathologic/index.html
@@ -10,6 +10,7 @@
 
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quattrocento:400,700|Quattrocento+Sans:400,700">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.3.7/slick.css"/>
         <link rel="stylesheet" href="css/font-awesome-4.2.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="css/style.css"/>
@@ -46,7 +47,7 @@
 
         <section class="hero">
             <img src="images/h1.jpg">
-            <p class="u-textCenter hero-text">“In Pathologic, everything is terrible and it’s all your fault.” <a href="http://killscreendaily.com/articles/pathologic-everything-terrible-and-its-all-your-fault/" target="_blank">-Kill Screen</a></p>
+            <p class="u-textCenter hero-text"><strong>“In Pathologic, everything is terrible and it’s all your fault.” <a href="http://killscreendaily.com/articles/pathologic-everything-terrible-and-its-all-your-fault/" target="_blank">-Kill Screen</a></strong></p>
             <p class="u-textCenter hero-text">Pathologic is a plot-driven survival open world adventure game for PC (Windows / MAC / Linux), PS4 and Xbox One</p>
             <a class="btn btn-large u-center" href="http://kickstarter.pathologic-game.com/" target="_blank">Kickstart Us</a>
         </section>
