slick for features, button changes

--- a/pathologic/index.html
+++ b/pathologic/index.html
@@ -25,22 +25,30 @@
     </head>
     <body>
         <header class="header section-background" style="background-image: url('images/bg-btn.jpg');">
-            <a class="btn pull-left"><i class="fa fa-reorder"></i></a>
+            <!-- <a class="btn pull-left"><i class="fa fa-reorder"></i></a> -->
+            <ul class="u-inlineList pull-left header-social btn-group">
+                <li>
+                    <a class="btn btn-small serif js-toggleLanguage active">EN</a>
+                </li>
+                <li>
+                    <a class="btn btn-small serif js-toggleLanguage">RU</a>
+                </li>
+            </ul>
             <ul class="u-inlineList pull-right header-social">
                 <li>
-                    <a class="btn" href="https://www.facebook.com/icepicklodge" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-small" href="https://www.facebook.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a class="btn" href="https://www.youtube.com/icepicklodge" target="_blank"><i class="fa fa-youtube"></i></a>
+                    <a class="btn btn-small" href="https://www.youtube.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-youtube"></i></a>
                 </li>
                 <li>
-                    <a class="btn" href="https://twitter.com/IcePickLodge" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-small" href="https://twitter.com/IcePickLodge" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
                 </li>
                 <li>
-                    <a class="btn" href="http://instagram.com/icepicklodge" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-small" href="http://instagram.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a class="btn" href="https://vk.com/icepicklodge" target="_blank"><i class="fa fa-vk"></i></a>
+                    <a class="btn btn-small" href="https://vk.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-vk"></i></a>
                 </li>
             </ul>
         </header>
@@ -49,7 +57,7 @@
             <img src="images/h1.jpg">
             <p class="u-textCenter hero-text"><strong>“In Pathologic, everything is terrible and it’s all your fault.” <a href="http://killscreendaily.com/articles/pathologic-everything-terrible-and-its-all-your-fault/" target="_blank">-Kill Screen</a></strong></p>
             <p class="u-textCenter hero-text">Pathologic is a plot-driven survival open world adventure game for PC (Windows / MAC / Linux), PS4 and Xbox One</p>
-            <a class="btn btn-large u-center" href="http://kickstarter.pathologic-game.com/" target="_blank">Kickstart Us</a>
+            <a class="btn btn-large serif u-center" href="http://kickstarter.pathologic-game.com/" target="_blank">Kickstart Us</a>
         </section>
 
         <section class="section-background section-light" style="background-image: url('images/bg-page1.png');">
@@ -58,25 +66,25 @@
             <p>The plot of Pathologic is broken into twelve days, each of them bringing new stories, quests, and events. Time flows mercilessly: if you fail to finish a task when it’s due, the opportunity goes away—as do human lives. You are completely free to roam and explore the Town, bartering, talking to strangers and generally surviving.</p>
         </section>
 
-        <section class="section-background section-light" style="background-image: url('images/bg-page1.png');">
+        <section class="section-background section-light slideshow-padding" style="background-image: url('images/bg-page1.png');">
             <h2 class="u-textCenter">Screenshots</h2>
-            <div class="js-slick">
-                <div>
+            <ul class="js-slick slideshow">
+                <li>
                     <img src="http://www.pathologic-game.com/images/screenshots/en/revolver1_eng.jpg">
-                </div>
-                <div>
+                </li>
+                <li>
                     <img src="http://www.pathologic-game.com/images/screenshots/en/maria2_eng.jpg">
-                </div>
-                <div>
+                </li>
+                <li>
                     <img src="http://www.pathologic-game.com/images/screenshots/en/maria_eng.jpg">
-                </div>
-                <div>
+                </li>
+                <li>
                     <img src="http://www.pathologic-game.com/images/screenshots/en/shadow_eng.jpg">
-                </div>
-                <div>
+                </li>
+                <li>
                     <img src="http://www.pathologic-game.com/images/screenshots/en/night_eng.jpg">
-                </div>
-            </div>
+                </li>
+            </ul>
         </section>
 
         <section class="section-background section-dark" style="background-image: url('images/bg-page2.png');">
@@ -87,9 +95,9 @@
 
         <section class="section-withBackground">
             <img class="section-header" src="images/bg-page3-top.png">
-            <div class="section-background section-light features-padding" style="background-image: url('images/bg-page3.jpg');">
+            <div class="section-background section-light slideshow-padding" style="background-image: url('images/bg-page3.jpg');">
                 <h2 class="u-textCenter">Features</h2>
-                <ul class="u-inlineList features-list">
+                <ul class="js-slick slideshow">
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-disease.jpg">
                         <p class="features-text">Do you think doctors are only there to ease the pain? What if it means you have to cut out someone’s heart in order to produce the medicine? Your instruments are crude, and you’ll have to fight the Plague on many levels. Searching for its roots to help the town is your main goal, but the Plague is also right here, in the streets, in your own body. It’s great to finish a quest and come one step closer to your goal, but it won’t matter if you’re dying.</p>
@@ -151,7 +159,7 @@
         </section>
 
         <section class="section-background section-footer u-textCenter" style="background-image: url('images/bg-page3.jpg');">
-            <a class="btn btn-large u-center" href="http://kickstarter.pathologic-game.com/" target="_blank">Kickstart Us</a>
+            <a class="btn btn-large serif u-center" href="http://kickstarter.pathologic-game.com/" target="_blank">Kickstart Us</a>
             <a class="link" href="http://www.pathologic-game.com/">View Desktop Site</a>
         </section>
 
