--- a/pathologic/index.html
+++ b/pathologic/index.html
@@ -8,7 +8,7 @@
 
         <title>Pathologic</title>
 
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" href="/favicon.png" type="image/png">
 
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quattrocento:400,700|Quattrocento+Sans:400,700">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.3.7/slick.css"/>
@@ -21,38 +21,42 @@
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-        <header class="header section-background" style="background-image: url('images/bg-btn.jpg');">
-            <ul class="u-inlineList pull-left header-social btn-group">
-                <li>
-                    <a class="btn btn-small serif js-toggleLanguage active">EN</a>
-                </li>
-                <li>
-                    <a class="btn btn-small serif js-toggleLanguage">RU</a>
-                </li>
-            </ul>
-            <ul class="u-inlineList pull-right header-social">
-                <li>
-                    <a class="btn btn-small" href="https://www.facebook.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
-                </li>
-                <li>
-                    <a class="btn btn-small" href="https://www.youtube.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-youtube"></i></a>
-                </li>
-                <li>
-                    <a class="btn btn-small" href="https://twitter.com/IcePickLodge" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
-                </li>
-                <li>
-                    <a class="btn btn-small" href="http://instagram.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
-                </li>
-                <li>
-                    <a class="btn btn-small" href="https://vk.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-vk"></i></a>
-                </li>
-            </ul>
+        <!-- <header class="header section-background" style="background-image: url('images/bg-btn.jpg');"> -->
+        <header class="header section-withBackground">
+            <div class="section-background header-padding header-background clearfix" style="background-image: url('images/bg-header.jpg');">
+                <ul class="u-inlineList pull-left header-social btn-group">
+                    <li>
+                        <a class="btn btn-small serif js-toggleLanguage active">EN</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-small serif js-toggleLanguage">RU</a>
+                    </li>
+                </ul>
+                <ul class="u-inlineList pull-right header-social">
+                    <li>
+                        <a class="btn btn-small" href="https://www.facebook.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a class="btn btn-small" href="https://www.youtube.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-youtube"></i></a>
+                    </li>
+                    <li>
+                        <a class="btn btn-small" href="https://twitter.com/IcePickLodge" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a class="btn btn-small" href="http://instagram.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a class="btn btn-small" href="https://vk.com/icepicklodge" target="_blank"><i class="fa fa-fw fa-vk"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <img class="section-footer" src="images/bg-header-bottom.png">
         </header>
 
         <section class="hero">
             <img src="images/h1.jpg">
-            <p class="u-textCenter hero-text"><strong>“In Pathologic, everything is terrible and it’s all your fault.” <a href="http://killscreendaily.com/articles/pathologic-everything-terrible-and-its-all-your-fault/" target="_blank">-Kill Screen</a></strong></p>
-            <p class="u-textCenter hero-text">Pathologic is a plot-driven survival open world adventure game for PC (Windows / MAC / Linux), PS4 and Xbox One</p>
+            <p class="u-textCenter hero-text large"><strong>“In Pathologic, everything is terrible and it’s all your fault.” <a href="http://killscreendaily.com/articles/pathologic-everything-terrible-and-its-all-your-fault/" target="_blank">-Kill Screen</a></strong></p>
+            <p class="u-textCenter hero-text large">Pathologic is a plot-driven survival open world adventure game for PC (Windows / MAC / Linux), PS4 and Xbox One</p>
             <a class="btn btn-large serif u-center" href="http://kickstarter.pathologic-game.com/" target="_blank">Kickstart Us</a>
         </section>
 
@@ -73,28 +77,28 @@
                 <h2 class="u-textCenter">Screenshots</h2>
                 <ul class="js-slick slideshow">
                     <li>
-                        <img src="images/screenshot-tragedian.png">
+                        <img src="images/screenshot-tragedian.jpg">
                     </li>
                     <li>
-                        <img src="images/screenshot-maria.png">
+                        <img src="images/screenshot-maria.jpg">
                     </li>
                     <li>
-                        <img src="images/screenshot-night.png">
+                        <img src="images/screenshot-night.jpg">
                     </li>
                     <li>
-                        <img src="images/screenshot-executor.png">
+                        <img src="images/screenshot-executor.jpg">
                     </li>
                     <li>
-                        <img src="images/screenshot-inventory.png">
+                        <img src="images/screenshot-inventory.jpg">
                     </li>
                     <li>
-                        <img src="images/screenshot-revolver.png">
+                        <img src="images/screenshot-revolver.jpg">
                     </li>
                     <li>
-                        <img src="images/screenshot-maria2.png">
+                        <img src="images/screenshot-maria2.jpg">
                     </li>
                     <li>
-                        <img src="images/screenshot-shadow.png">
+                        <img src="images/screenshot-shadow.jpg">
                     </li>
                 </ul>
             </div>
@@ -122,47 +126,47 @@
                 <ul class="js-slick slideshow">
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-disease.jpg">
-                        <p class="features-text">Do you think doctors are only there to ease the pain? What if it means you have to cut out someone’s heart in order to produce the medicine? Your instruments are crude, and you’ll have to fight the Plague on many levels. Searching for its roots to help the town is your main goal, but the Plague is also right here, in the streets, in your own body. It’s great to finish a quest and come one step closer to your goal, but it won’t matter if you’re dying.</p>
+                        <p class="small">Do you think doctors are only there to ease the pain? What if it means you have to cut out someone’s heart in order to produce the medicine? Your instruments are crude, and you’ll have to fight the Plague on many levels. Searching for its roots to help the town is your main goal, but the Plague is also right here, in the streets, in your own body. It’s great to finish a quest and come one step closer to your goal, but it won’t matter if you’re dying.</p>
                     </li>
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-plague.jpg">
-                        <p class="features-text"><strong>The epidemic is realistically simulated</strong>, which means that it’ll unfold in real time, affecting both the gameplay mechanics and the plot. Do you need to cut corners in a hurry, or perhaps you’re looking for a butcher? Tough luck—if the district you need is infected, it’ll become a danger zone. Shops’ll close, houses’ll lock down, and the air itself’ll become poisonous. But you may not have another option.</p>
+                        <p class="small"><strong>The epidemic is realistically simulated</strong>, which means that it’ll unfold in real time, affecting both the gameplay mechanics and the plot. Do you need to cut corners in a hurry, or perhaps you’re looking for a butcher? Tough luck—if the district you need is infected, it’ll become a danger zone. Shops’ll close, houses’ll lock down, and the air itself’ll become poisonous. But you may not have another option.</p>
                     </li>
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-survival.jpg">
-                        <p class="features-text">You’ll find no zombies here—it’s the real deal. Hunger, thirst, fatigue, immune resistance, and reputation are all gameplay mechanics, but you’ll also find out that sometimes your affection towards certain characters or your weariness can’t be expressed in numbers. Your enemy is relentless and heartless. Ask yourself: does survival only mean the preservation of your body?</p>
+                        <p class="small">You’ll find no zombies here—it’s the real deal. Hunger, thirst, fatigue, immune resistance, and reputation are all gameplay mechanics, but you’ll also find out that sometimes your affection towards certain characters or your weariness can’t be expressed in numbers. Your enemy is relentless and heartless. Ask yourself: does survival only mean the preservation of your body?</p>
                     </li>
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-trade.jpg">
-                        <p class="features-text">You’ll always be hard pressed for resources, money not excluded. But money can’t save your life—you can’t eat it, you can’t heal with it, and you may find out money is worthless. So you’ll barter with townsfolk, and that’ll keep you afloat… if you’re fine with taking bullets from kids and trading your only gun for a loaf of bread.</p>
+                        <p class="small">You’ll always be hard pressed for resources, money not excluded. But money can’t save your life—you can’t eat it, you can’t heal with it, and you may find out money is worthless. So you’ll barter with townsfolk, and that’ll keep you afloat… if you’re fine with taking bullets from kids and trading your only gun for a loaf of bread.</p>
                     </li>
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-fight.jpg">
-                        <p class="features-text">Fights are both simple and hard. You’ll find threats here and there: the bandits at night, the marauders, the sick insane with pain, and simply those who don’t like you. Pathologic is not a shooter—it doesn’t take many bullets to kill someone. But you may only have one left, or your gun may misfire, or perhaps you simply won’t like killing innocent victims. Running or hiding is generally preferable, but you can’t run forever.</p>
+                        <p class="small">Fights are both simple and hard. You’ll find threats here and there: the bandits at night, the marauders, the sick insane with pain, and simply those who don’t like you. Pathologic is not a shooter—it doesn’t take many bullets to kill someone. But you may only have one left, or your gun may misfire, or perhaps you simply won’t like killing innocent victims. Running or hiding is generally preferable, but you can’t run forever.</p>
                     </li>
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-explore.jpg">
-                        <p class="features-text">Explore both the town and the characters. In Pathologic nothing is accidental—every place and every person has a story to tell. You are free to go anywhere making your own story, but remember that no one and nothing will wait for you.</p>
+                        <p class="small">Explore both the town and the characters. In Pathologic nothing is accidental—every place and every person has a story to tell. You are free to go anywhere making your own story, but remember that no one and nothing will wait for you.</p>
                     </li>
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-town.jpg">
-                        <p class="features-text">The town is living and breathing. The weather and the time of day is not the only thing that keeps changing: the prices rise and fall depending on the situation, and various events happen in the streets—everything realized in full immersive 3D. People will die, meet one another, perform rituals, and generally live. Sometimes you’ll be there to intervene. Sometimes you won’t.</p>
+                        <p class="small">The town is living and breathing. The weather and the time of day is not the only thing that keeps changing: the prices rise and fall depending on the situation, and various events happen in the streets—everything realized in full immersive 3D. People will die, meet one another, perform rituals, and generally live. Sometimes you’ll be there to intervene. Sometimes you won’t.</p>
                     </li>
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-time.jpg">
-                        <p class="features-text">Time is always running, and for the most part it’s running out. There are so many things to do in the Town… which means you’ll have to choose. You can still pause the game and save whenever you want if needed, but while playing you’ll have to remember to manage the most precious of resources—the one you can’t buy or barter for.</p>
+                        <p class="small">Time is always running, and for the most part it’s running out. There are so many things to do in the Town… which means you’ll have to choose. You can still pause the game and save whenever you want if needed, but while playing you’ll have to remember to manage the most precious of resources—the one you can’t buy or barter for.</p>
                     </li>
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-characters.jpg">
-                        <p class="features-text">Three playable characters with different storylines. Pathologic isn’t your generic “choose the race and get called differently” game. The Bachelor’s, The Haruspex’s and the Chagelling’s storylines contain different quests and events. Each of them will lead you to an answer—but you’ll also find out that it’s just the fraction of the whole truth, a single person’s perspective.</p>
+                        <p class="small">Three playable characters with different storylines. Pathologic isn’t your generic “choose the race and get called differently” game. The Bachelor’s, The Haruspex’s and the Chagelling’s storylines contain different quests and events. Each of them will lead you to an answer—but you’ll also find out that it’s just the fraction of the whole truth, a single person’s perspective.</p>
                     </li>
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-choices.jpg">
-                        <p class="features-text">Choices matter. Once again, it works on many levels. Do you finish a sidequest risking to die tomorrow, or do you let it go? Whom do you save, a man of noble intentions that have backfired or his less-than-honorable father who is innocent in this particular case? Do you try to keep your cool, or do your emotions get the best of you?</p>
+                        <p class="small">Choices matter. Once again, it works on many levels. Do you finish a sidequest risking to die tomorrow, or do you let it go? Whom do you save, a man of noble intentions that have backfired or his less-than-honorable father who is innocent in this particular case? Do you try to keep your cool, or do your emotions get the best of you?</p>
                     </li>
                     <li class="features-listItem">
                         <img class="features-img" src="images/feature-big.jpg">
-                        <p class="features-text">Pathologic is a big game. The full walkthrough with three characters will take you up to 72 hours. And it’s not grinding: each in-game day you’ll face new quests, new events, new plotlines, and new circumstances.</p>
+                        <p class="small">Pathologic is a big game. The full walkthrough with three characters will take you up to 72 hours. And it’s not grinding: each in-game day you’ll face new quests, new events, new plotlines, and new circumstances.</p>
                     </li>
                 </ul>
             </div>
@@ -187,7 +191,7 @@
         </section>
 
         <section class="section-withBackground">
-            <img class="section-header" src="images/bg-town-top.png">
+            <img class="section-header" src="images/bg-brown-top.png">
             <div class="section-background section-dark">
                 <a class="btn btn-large serif u-center" href="http://kickstarter.pathologic-game.com/" target="_blank">Kickstart Us</a>
                 <p class="u-textCenter"><a class="link" href="http://www.pathologic-game.com/">View Desktop Site</a></p>
