--- a/pathologic/index.html
+++ b/pathologic/index.html
@@ -55,7 +55,13 @@
 
         <section class="hero">
             <img src="images/h1.jpg">
-            <p class="u-textCenter hero-text large"><strong>“In Pathologic, everything is terrible and it’s all your fault.” <a href="http://killscreendaily.com/articles/pathologic-everything-terrible-and-its-all-your-fault/" target="_blank">-Kill Screen</a></strong></p>
+            <p class="u-textCenter hero-text large">
+                <strong>
+                    “In Pathologic, everything is terrible
+                    <br>
+                    and it’s all your fault.”
+                </strong>
+            </p>
             <p class="u-textCenter hero-text large">Pathologic is a plot-driven survival open world adventure game for PC (Windows / MAC / Linux), PS4 and Xbox One</p>
             <a class="btn btn-large serif u-center" href="http://kickstarter.pathologic-game.com/" target="_blank">Kickstart Us</a>
         </section>
@@ -186,7 +192,19 @@
             <img class="section-header" src="images/bg-landscape-top.png">
             <div class="section-background section-light" style="background-image: url('images/bg-landscape.jpg');">
                 <h2 class="u-textCenter">Pathologic in the Press</h2>
-                <p>The uniqueness of Pathologic lies in the ideas that fill its fabric, not in its genre or setting (though we like to think that they’re pretty unusual too).</p>
+                <ul>
+                    <li>“Pathologic Reimagined”: a very in-depth look on the game by Adam Smith of Rock, Paper, Shotgun.</li>
+
+                    <li>Eurogamer: “It's a horror game unlike any other as the nefarious force isn't just some demonic army, mad scientist or mythical boogeyman, but rather a plague. As such, you can't kick its butt - as it doesn't have one - and it will kill people. Lots of people.”</li>
+
+                    <li>PC Gamer: “The game wasn't good in any of the ways you would traditionally associate the word, but it was weird and interesting—filled with ideas and ambition, but lacking the technical mastery to really pull them off. It was broken in so many ways. At the same time, it was a game that's completely unforgettable. A remake, then, could be an ideal solution.”</li>
+
+                    <li>Kill Screen: “In Pathologic, everything is terrible and it’s all your fault.”</li>
+
+                    <li>Death by Beta: “As survival games go, Pathologic from Ice-Pick Lodge seems to stand out. First off, no zombies.”</li>
+
+                    <li>VG 24/7: “One of the coolest things about is that you can’t really “win” as such – you can’t save everyone, and you can’t defeat the plague ravaging the town.”</li>
+                </ul>
             </div>
         </section>
 
