--- a/pathologic/index.html
+++ b/pathologic/index.html
@@ -8,7 +8,7 @@
 
         <title>Pathologic</title>
 
-        <link rel="icon" href="/favicon.png" type="image/png">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quattrocento:400,400italic,700|Quattrocento+Sans:400,700">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
