--- a/index.html
+++ b/index.html
@@ -51,10 +51,151 @@
 						<p class="f-large">
 							I live in Sydney, Australia.
 							<br>
-							I'm currently working for <a href="http://stackla.com/" target="_blank">Stackla</a>.
+							I'm currently working for <a href="http://www.deputy.com/" target="_blank">Deputy</a>.
 							<br>
-							I play drums in a band and I'm listening to <a href="http://open.spotify.com/album/44zxsD8WYyaxxPhdswZZAa" target="_blank">Ulver</a> right now.
+							I play drums in a band and I'm listening to <a href="http://open.spotify.com/track/6WVRhBxRMW9fn6sRkt2gWn" target="_blank">Interstellar</a> right now.
 						</p>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Web Design + Coding
+						</div>
+						<h1 class="pull-right uppercase align-right padding-bottom">
+							True Skate
+						</h1>
+						<p class="f-medium align-right">
+							True Skate is the #1 game on the app store in 70 countries.
+							<span class="mobile-hide">We used Stackla to create a microsite that would promote the brand's social media<span class="tablet-hide">,
+							engage users to post their own content, and drive sales</span>.</span>
+						</p>
+						<a class="button pull-right" href="http://social.trueskate.com" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/trueskate.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Website Design, UX and Coding
+						</div>
+						<h2 class="pull-right uppercase align-right padding-bottom">
+							Stackla Admin Portal
+						</h2>
+						<p class="f-medium align-right" style="clear: right;">
+							The Stackla Admin Portal allows clients to aggregate and curate their content, and edit their displays.
+							<br>
+							The UX has been constantly improved with user testing, and is supported by a minimal design focusing on content and small bursts of colour.
+						</p>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/admin.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Web Design + Coding
+						</div>
+						<h1 class="pull-right uppercase align-right padding-bottom">
+							Stackla
+						</h1>
+						<p class="f-medium align-right">
+							The website draws most of Stackla's leads by showcasing Stackla's five different solutions<span class="tablet-hide">, showing the most popular clients, and using a fun animation to quickly explain what the product does</span>.
+						</p>
+						<a class="button pull-right" href="http://stackla.com" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/stackla.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Coding
+						</div>
+						<h2 class="pull-right uppercase align-right padding-bottom">
+							Manchester United
+						</h2>
+						<p class="f-medium align-right">
+						 	The site allows fans to see all the content being produced by the club in one place across all their major accounts.<span class="tablet-hide"> It's a national site, serving multiple languages at once.</span>
+						</p>
+						<a class="button pull-right" href="http://social.manutd.com/" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/manu.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Coding
+						</div>
+						<h2 class="pull-right uppercase align-right padding-bottom">
+							Asia's Next Top Model
+						</h2>
+						<p class="f-medium align-right">
+							Built to support the TV show and promote social engagement after each week's program.<span class="tablet-hide"> A custom Wordpress theme built from scratch to suit the client's designs. Fully responsive, retina and all that jazz.</span>
+						</p>
+						<a class="button pull-right" href="http://asntm2.starworldasia.tv/" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/asntm.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Coding
+						</div>
+						<h2 class="pull-right uppercase align-right padding-bottom">
+							Myer
+						</h2>
+						<p class="f-medium align-right" style="clear: right;">
+							A number of widgets were built to support the livestream of the Myer Spring Summer 2015 Fashion Launch.
+						</p>
+						<a class="button pull-right" href="http://myer.com.au/livestream" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/myer.jpg">
+						</div>
 					</div>
 				</div>
 			</section>
