--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script src='media/js/fastclick.js'></script>
 	<script src='media/js/jquery.fullPage.min.js'></script>
 	<script src="media/js/jquery.easings.min.js"></script>
-	<script src='media/js/script4.js'></script>
+	<script src='media/js/script.js'></script>
 </head>
 <body>
 	<div id="fullpage">
@@ -34,7 +34,9 @@
 					<p class="f-large short-width animate-before js-animate-3">
 						I’m an interaction designer based in Sydney. I make beautiful websites.
 					</p>
-					<button class="animate-before js-animate-4">Explore</button>
+					<div class="animate-before js-animate-4">
+						<button>Explore</button>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -72,6 +74,29 @@
 						Web Design + Coding
 					</div>
 					<h1 class="pull-right uppercase align-right padding-bottom">
+						Deputy
+					</h1>
+					<p class="f-medium align-right">
+						Deputy is a web and mobile app that serves over 70,000 people worldwide. <span class="mobile-hide">I needed to bring the desktop app and website together to look like the same product - this was the first step in a big design overhaul.</span>
+					</p>
+					<a class="button pull-right" href="http://www.deputy.com" target="_blank">Visit Site <i class="icon-right"></i></a>
+				</div>
+				<div class="grid grid-8-12">
+					<div class="img-viewer">
+						<img src="media/images/work/deputy.jpg">
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+		<section class="section dark bg-black">
+			<div class="container wide">
+				<div class="text grid grid-4-12">
+					<div class="f-small align-right superscript tablet-hide">
+						Web Design + Coding
+					</div>
+					<h1 class="pull-right uppercase align-right padding-bottom">
 						True Skate
 					</h1>
 					<p class="f-medium align-right">
@@ -83,7 +108,7 @@
 				</div>
 				<div class="grid grid-8-12">
 					<div class="img-viewer">
-						<img src="media/images/trueskate.jpg">
+						<img src="media/images/work/trueskate.jpg">
 					</div>
 				</div>
 			</div>
@@ -107,7 +132,7 @@
 				</div>
 				<div class="grid grid-8-12">
 					<div class="img-viewer">
-						<img src="media/images/admin.jpg">
+						<img src="media/images/work/admin.jpg">
 					</div>
 				</div>
 			</div>
@@ -130,7 +155,7 @@
 				</div>
 				<div class="grid grid-8-12">
 					<div class="img-viewer">
-						<img src="media/images/stackla.jpg">
+						<img src="media/images/work/stackla.jpg">
 					</div>
 				</div>
 			</div>
@@ -153,7 +178,7 @@
 				</div>
 				<div class="grid grid-8-12">
 					<div class="img-viewer">
-						<img src="media/images/manu.jpg">
+						<img src="media/images/work/manu.jpg">
 					</div>
 				</div>
 			</div>
@@ -176,7 +201,7 @@
 				</div>
 				<div class="grid grid-8-12">
 					<div class="img-viewer">
-						<img src="media/images/asntm.jpg">
+						<img src="media/images/work/asntm.jpg">
 					</div>
 				</div>
 			</div>
@@ -199,7 +224,7 @@
 				</div>
 				<div class="grid grid-8-12">
 					<div class="img-viewer">
-						<img src="media/images/myer.jpg">
+						<img src="media/images/work/myer.jpg">
 					</div>
 				</div>
 			</div>
