--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 						</div>
 						<h1 class="pull-right uppercase align-right padding-bottom animate-before js-animate-2">
 							Morgan<br>Carter
+							<span class="js-this"></span>
 						</h1>
 					</div>
 					<div class="grid grid-6-12 offset-top-1">
