iphone parallax test

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 							Website Design, UX and Coding
 						</div>
 						<h2 class="uppercase align-right padding-bottom">
-							Stackla Admin Portal
+							Stackla Admin<span class="tablet-hide"> Portal</span>
 						</h2>
 						<p class="f-medium align-right" style="clear: right;">
-							The Stackla Admin Portal allows clients to aggregate and curate their content, and edit their displays.
+							The Stackla Admin Portal allows clients to aggregate and curate their content, and edit their displays.<span class="tablet-hide">
 							<br>
-							The UX has been constantly improved with user testing, and is supported by a minimal design focusing on content and small bursts of colour.
+							The UX has been constantly improved with user testing, and is supported by a minimal design focusing on content and small bursts of colour.</span>
 						</p>
 					</div>
 					<div class="grid grid-8-12">
