--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<div class="f-small align-right superscript tablet-hide">
 							Web Design + Coding
 						</div>
-						<h2 class="pull-right uppercase align-right padding-bottom">
+						<h2 class="uppercase align-right padding-bottom">
 							Deputy
 						</h2>
 						<p class="f-medium align-right">
@@ -102,7 +102,7 @@
 						<div class="f-small align-right superscript tablet-hide">
 							Web Design + Coding
 						</div>
-						<h2 class="pull-right uppercase align-right padding-bottom">
+						<h2 class="uppercase align-right padding-bottom">
 							True Skate
 						</h2>
 						<p class="f-medium align-right">
@@ -155,7 +155,7 @@
 						<div class="f-small align-right superscript tablet-hide">
 							Web Design + Coding
 						</div>
-						<h2 class="pull-right uppercase align-right padding-bottom">
+						<h2 class="uppercase align-right padding-bottom">
 							Stackla
 						</h2>
 						<p class="f-medium align-right">
