--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 ---
 layout: bare
+siteNav: home
 ---
 
 <div class="m-home-wrapper padding margin-large">
-	<div class="m-home-hero row">
+	<div class="m-heroText-hero m-heroText-hero--home row">
 		<div>
-			<p class="m-home-hello">Hi, I'm</p>
-			<h1 class="m-home-title">Morgan Carter</h1>
+			<p class="m-heroText-hello">Hi, I'm</p>
+			<h1 class="m-heroText-title">Morgan Carter</h1>
 		</div>
 		<div>
-			<p class="m-home-subtitle">I’m a product designer based in Sydney.<br class="m-home-br"> I turn complex ideas into intuitive, beautiful products.</p>
+			<p class="m-heroText-paragraph">I’m a product designer based in Sydney.<br class="m-heroText-br"> I turn complex ideas into intuitive, beautiful products.</p>
 		</div>
 	</div>
 
-	<div class="m-homeLatest container--small">
-		<h4 class="m-homeLatest-header">Latest Works</h4>
-		<ul class="u-listUnstyled margin-none row m-homeLatest-list">
+	<div class="m-latestWork container--small">
+		<h4 class="m-latestWork-header">Latest Works</h4>
+		<ul class="u-listUnstyled margin-none row m-latestWork-list">
 			{% for post in site.posts limit:3 %}
-				<li class="col-xs-6 col-sm-4 m-homeLatest-item">
-					<a class="m-homeLatest-work" href="{{ post.url | prepend: site.baseurl }}">
-						<img src="/images/work/thumbnails/{{post.thumbnail}}" class="m-homeLatest-image">
+				<li class="col-xs-6 col-sm-4 m-latestWork-item">
+					<a class="m-latestWork-work" href="{{ post.url | prepend: site.baseurl }}">
+						<img src="/assets/images/work/thumbnails/{{post.thumbnail}}" class="m-latestWork-image">
 						<strong>{{ post.title }}</strong>
-						<p class="m-homeLatest-subtitle margin-none u-text--small">{{ post.subtitle }}</p>
+						<p class="m-latestWork-subtitle margin-none u-text--small">{{ post.subtitle }}</p>
 					</a>
 				</li>
 			{% endfor %}
