--- a/work.html
+++ b/work.html
@@ -1,5 +1,6 @@
 ---
 layout: bare
+siteNav: work
 title:  "Work"
 categories: jekyll update
 permalink: /work/
@@ -18,10 +19,10 @@ permalink: /work/
 				<p>{{ post.description }}</p>
 
 				{% if post.is_blog %}
-					<a class="btn">View Case Study</a>
+					<a class="btn" href="{{ post.url | prepend: site.baseurl }}">View Case Study</a>
 				{% endif %}
 				{% if post.link %}
-					<a class="btn">Visit Site</a>
+					<a class="btn" href="{{post.link}}" target="_blank">Visit Site</a>
 				{% endif %}
 			</div>
 			<div class="col-sm-8 m-work-image" style="background-image: url(/images/work/{{post.image}})"></div>
