--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ siteNav: home
 		<ul class="u-listUnstyled margin-none row m-latestWork-list">
 			{% for post in site.posts limit:3 %}
 				<li class="col-xs-6 col-sm-4 m-latestWork-item">
-					<a class="m-latestWork-work" href="{{ post.url | prepend: site.baseurl }}">
+					<a class="m-latestWork-work" href="{% if post.is_blog %}{{ post.url | prepend: site.baseurl }}{% endif %}{% if post.link %}{{post.link}}{% endif %}">
 						<img src="/assets/images/work/thumbnails/{{post.thumbnail}}" class="m-latestWork-image">
 						<strong>{{ post.title }}</strong>
 						<p class="m-latestWork-subtitle margin-none u-text--small">{{ post.subtitle }}</p>
@@ -29,4 +29,17 @@ siteNav: home
 		</ul>
 	</div>
 </div>
-<div class="m-home-me"></div>
+<div class="m-home-me">
+	<div class="m-home-wrapper m-home-wrapper--invert padding">
+		<div class="m-heroText-hero m-heroText-hero--home row">
+			<div>
+				<p class="m-heroText-hello">Hi, I'm</p>
+				<h1 class="m-heroText-title">Morgan Carter</h1>
+			</div>
+			<div>
+				<p class="m-heroText-paragraph">I’m a product designer based in Sydney.<br class="m-heroText-br"> I turn complex ideas into intuitive, beautiful products.</p>
+			</div>
+		</div>
+	</div>
+</div>
+
