--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@ categories: jekyll update
 permalink: /work/
 ---
 
-<div class="container padding--large margin-large">
+<div class="container padding--large margin-none">
 	<h1>{{ page.title }}</h1>
 </div>
 
@@ -25,7 +25,9 @@ permalink: /work/
 					<a class="btn" href="{{post.link}}" target="_blank">Visit Site</a>
 				{% endif %}
 			</div>
-			<div class="col-sm-8 m-work-image" style="background-image: url(/images/work/{{post.image}})"></div>
+			<div class="col-sm-8">
+				<div class="m-work-image" style="background-image: url(/assets/images/work/{{post.image}})"></div>
+			</div>
 		</li>
 	{% endfor %}
 </ul>
