--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
 layout: bare
 siteNav: home
+body-id: home
 ---
 
-<div class="m-home-wrapper padding margin-large">
-	<div class="m-heroText-hero m-heroText-hero--home row">
+<div class="m-home-wrapper padding margin-none">
+	<div class="m-heroText-hero m-heroText-hero--home row js-verticalAlign">
 		<div>
 			<p class="m-heroText-hello">Hi, I'm</p>
 			<h1 class="m-heroText-title">Morgan Carter</h1>
@@ -31,7 +32,7 @@ siteNav: home
 </div>
 <div class="m-home-me">
 	<div class="m-home-wrapper m-home-wrapper--invert padding">
-		<div class="m-heroText-hero m-heroText-hero--home row">
+		<div class="m-heroText-hero m-heroText-hero--home row js-verticalAlign">
 			<div>
 				<p class="m-heroText-hello">Hi, I'm</p>
 				<h1 class="m-heroText-title">Morgan Carter</h1>
