--- a/about.html
+++ b/about.html
@@ -13,11 +13,9 @@ permalink: /about/
 			<h1 class="m-heroText-title">About Me</h1>
 		</div>
 		<div>
-			<p class="m-heroText-paragraph">I live in Sydney, Australia - but I’m currently country-hopping across Europe and Asia with my partner.</p>
-			<p class="m-heroText-paragraph">I’m formally trained in UX/UI design, and self-taught in visual design and front-end development.</p>
-			<p class="m-heroText-paragraph">I play drums in a band, and have recorded and mixed a <a href="https://themanhattanalgorithm.bandcamp.com" target="_blank">number</a> <a>of</a> <a>albums</a>.</p>
-			<p class="m-heroText-paragraph">Currently listening to: <a href="https://open.spotify.com/track/03Yr1R9L5qb2afxnHMpPhW">Godspeed You! Black Emperor</a>.</p>
-			<p class="m-heroText-paragraph">You can find me on <a>Twitter</a> and <a>Dribbble</a>, contact me at <a>morgancarter1@gmail.com</a> and download my <a href="/assets/files/MorganCarterResume.pdf">résumé</a>.</p>
+			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe">I’m formally trained in UX/UI design, and self-taught in visual design and front-end development.</p>
+			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe">I play drums in a band, and have recorded and mixed a <a href="https://themanhattanalgorithm.bandcamp.com" target="_blank">number</a> <a href="https://soundcloud.com/juanpombo/death-volta-02-eram-quod-es" target="_blank">of</a> <a href="https://soundcloud.com/the-manhattan-algorithm/meridian-hour" target="_blank">albums</a>.</p>
+			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe">You can find me on <a>Twitter</a> and <a>Dribbble</a>, contact me at <a>morgancarter1@gmail.com</a> and download my <a href="/assets/files/MorganCarterResume.pdf">résumé</a>.</p>
 		</div>
 	</div>
 </div>
