--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@ permalink: /work/
 
 <ul class="u-listUnstyled m-work-list">
 	{% for post in site.posts %}
-		<li class="m-work-item clearfix padding">
+		<li class="m-work-item row padding">
 			<div class="col-sm-4">
 				<p class="u-text--small u-color--gray">{{ post.role }}</p>
 				<h2 class="m-work-title">{{ post.title }}</h2>
