restructuring for blog and works

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ categories: jekyll update
 permalink: /about/
 ---
 
-<div class="padding margin-large">
+<div class="padding margin--lg">
 	<div class="m-heroText-hero row">
 		<div>
 			<p class="m-heroText-hello m-heroText-hello--aLittleBit">A little bit</p>
@@ -15,7 +15,7 @@ permalink: /about/
 		<div>
 			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe">I’m formally trained in UX/UI design, and self-taught in visual design and front-end development.</p>
 			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe">I play drums in a band, and have recorded and mixed a <a href="https://themanhattanalgorithm.bandcamp.com" target="_blank">number</a> <a href="https://soundcloud.com/juanpombo/death-volta-02-eram-quod-es" target="_blank">of</a> <a href="https://soundcloud.com/the-manhattan-algorithm/meridian-hour" target="_blank">albums</a>.</p>
-			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe">You can find me on <a>Twitter</a> and <a>Dribbble</a>, contact me at <a>morgancarter1@gmail.com</a> and download my <a href="/assets/files/MorganCarterResume.pdf">résumé</a>.</p>
+			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe">You can find me on <a href="https://dribbble.com/morgoe" target="_blank">Dribbble</a>, contact me at <a href="mailto:morgancarter1@gmail.com">morgancarter1@gmail.com</a> and download my <a href="/assets/files/MorganCarterResume.pdf">résumé</a>.</p>
 		</div>
 	</div>
 </div>
