--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@ body-id: home
 			<h1 class="m-heroText-title">Morgan Carter</h1>
 		</div>
 		<div>
-			<p class="m-heroText-paragraph">I’m a product designer based in Sydney.<br class="m-heroText-br"> I turn complex ideas into intuitive, beautiful products.</p>
+			<p class="m-heroText-paragraph"><br>I’m a product designer based in Sydney.<br class="m-heroText-br"> I turn complex ideas into intuitive, beautiful products.</p>
+			<a class="btn" href="/work">See my work</a>
 		</div>
 	</div>
 
-	<div class="m-latestWork">
+	<div class="m-latestWork hidden">
 		<h4 class="m-latestWork-header">Latest Works</h4>
 		<ul class="u-listUnstyled margin--none row m-latestWork-list">
 			{% for post in site.categories['work'] limit:3 %}
@@ -38,7 +39,8 @@ body-id: home
 				<h1 class="m-heroText-title">Morgan Carter</h1>
 			</div>
 			<div>
-				<p class="m-heroText-paragraph">I’m a product designer based in Sydney.<br class="m-heroText-br"> I turn complex ideas into intuitive, beautiful products.</p>
+				<p class="m-heroText-paragraph"><br>I’m a product designer based in Sydney.<br class="m-heroText-br"> I turn complex ideas into intuitive, beautiful products.</p>
+				<a class="btn" href="/work">See my work</a>
 			</div>
 		</div>
 	</div>
