fix animations site-wide

--- a/about.html
+++ b/about.html
@@ -9,13 +9,13 @@ permalink: /about/
 <div class="padding margin--lg">
 	<div class="m-heroText-hero row">
 		<div>
-			<p class="m-heroText-hello m-heroText-hello--aLittleBit">A little bit</p>
-			<h1 class="m-heroText-title">About Me</h1>
+			<p class="m-heroText-hello m-heroText-hello--aLittleBit m-animation-1">A little bit</p>
+			<h1 class="m-heroText-title m-animation-2">About Me</h1>
 		</div>
 		<div>
-			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe"><br>I’m formally trained in UX/UI design, and self-taught in visual design and front-end development.</p>
-			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe">I play drums in a band, and have recorded and mixed a <a href="https://themanhattanalgorithm.bandcamp.com" target="_blank">number</a> <a href="https://soundcloud.com/juanpombo/death-volta-02-eram-quod-es" target="_blank">of</a> <a href="https://soundcloud.com/the-manhattan-algorithm/meridian-hour" target="_blank">albums</a>.</p>
-			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe">You can find me on <a href="https://dribbble.com/morgoe" target="_blank">Dribbble</a>, contact me at <a href="mailto:morgancarter1@gmail.com">morgancarter1@gmail.com</a> and download my <a href="/assets/files/MorganCarterResume.pdf">résumé</a>.</p>
+			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe m-animation-3"><br>I’m formally trained in UX/UI design, and self-taught in visual design and front-end development.</p>
+			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe m-animation-4">I play drums in a band, and have recorded and mixed a <a href="https://themanhattanalgorithm.bandcamp.com" target="_blank">number</a> <a href="https://soundcloud.com/juanpombo/death-volta-02-eram-quod-es" target="_blank">of</a> <a href="https://soundcloud.com/the-manhattan-algorithm/meridian-hour" target="_blank">albums</a>.</p>
+			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe m-animation-5">You can find me on <a href="https://dribbble.com/morgoe" target="_blank">Dribbble</a>, contact me at <a href="mailto:morgancarter1@gmail.com">morgancarter1@gmail.com</a> and download my <a href="/assets/files/MorganCarterResume.pdf">résumé</a>.</p>
 		</div>
 	</div>
 </div>
