--- a/work.html
+++ b/work.html
@@ -6,13 +6,13 @@ categories: jekyll update
 permalink: /work/
 ---
 
-<div class="container padding--lg margin--none">
+<div class="container padding--lg margin--none m-animation-1">
 	<h1 class="m-page-title">{{ page.title }}</h1>
 </div>
 
 <ul class="u-listUnstyled m-work-list m-page-content padding">
 	{% for post in site.categories['work'] %}
-		<li class="m-work-item row">
+		<li class="m-work-item row m-animation-{{forloop.index}}">
 			<div class="col-sm-4">
 				<p class="u-text--small u-color--gray">{{ post.role }}</p>
 				<h2 class="m-work-title">{{ post.title }}</h2>
